--- a/Projet/Projet.vcxproj
+++ b/Projet/Projet.vcxproj
@@ -167,11 +167,10 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Collision.h" />
-    <ClInclude Include="Enemy.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="Ladder.h" />
     <ClInclude Include="PhysicsManager.h" />
     <ClInclude Include="SimpleObject.h" />
-    <ClInclude Include="Game.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Platform.h" />
     <ClInclude Include="Player.h" />
@@ -182,11 +181,10 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Collision.cpp" />
-    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="Ladder.cpp" />
     <ClCompile Include="PhysicsManager.cpp" />
     <ClCompile Include="SimpleObject.cpp" />
-    <ClCompile Include="Game.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
