--- a/Projet/Projet.vcxproj
+++ b/Projet/Projet.vcxproj
@@ -165,8 +165,10 @@
   <ItemGroup>
     <ClInclude Include="AnimatedObject.h" />
     <ClInclude Include="Application.h" />
+    <ClInclude Include="Barrel.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Collision.h" />
+    <ClInclude Include="DonkeyKong.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Ladder.h" />
     <ClInclude Include="PhysicsManager.h" />
@@ -179,8 +181,10 @@
   <ItemGroup>
     <ClCompile Include="AnimatedObject.cpp" />
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="Barrel.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Collision.cpp" />
+    <ClCompile Include="DonkeyKong.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Ladder.cpp" />
     <ClCompile Include="PhysicsManager.cpp" />
