--- a/Projet/Projet.vcxproj
+++ b/Projet/Projet.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="AnimatedObject.h" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="Barrel.h" />
+    <ClInclude Include="BarrelOfOil.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="DonkeyKong.h" />
@@ -182,6 +183,7 @@
     <ClCompile Include="AnimatedObject.cpp" />
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Barrel.cpp" />
+    <ClCompile Include="BarrelOfOil.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="DonkeyKong.cpp" />
