--- a/Projet/Projet.vcxproj.filters
+++ b/Projet/Projet.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="Barrel.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="BarrelOfOil.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -99,6 +102,9 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="Barrel.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="BarrelOfOil.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
