--- a/Projet/Projet.vcxproj.filters
+++ b/Projet/Projet.vcxproj.filters
@@ -57,7 +57,10 @@
     <ClInclude Include="Barrel.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
-    <ClInclude Include="BarrelOfOil.h">
+    <ClInclude Include="BurningBarrel.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="BlueBarrel.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
@@ -104,7 +107,10 @@
     <ClCompile Include="Barrel.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="BarrelOfOil.cpp">
+    <ClCompile Include="BurningBarrel.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="BlueBarrel.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
